--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.png" alt="BHOOMIKA MITTAL profile picture">
+            <img src="profile-pic.png" alt="BHOOMIKA MITTAL profile picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Heyy!!, I'm</p>
@@ -46,14 +46,14 @@
             <p class="section__text__p2">Software Engineer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" 
-                onclick="window.open('./assets/myResume.pdf')">Download CV </button>
+                onclick="window.open('myResume.pdf')">Download CV </button>
                 <button class="btn btn-color-1" 
                 onclick="location.href='./#contact'">Contact Info </button>
             </div>
             <div id="socials-container">
-                <img src="./assets/linkedin.png" alt="My Linkedin Profile"
+                <img src="linkedin.png" alt="My Linkedin Profile"
                 class="icon" onclick="location.href='https://www.linkedin.com/in/bhoomikamittal/'"/>
-                <img src="./assets/github.png" alt="My github Profile"
+                <img src="github.png" alt="My github Profile"
                 class="icon" onclick="location.href='https://github.com/BhoomikaMittal48'"/>
             </div>
         </div>
@@ -65,7 +65,7 @@
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="./assets/education.png" 
+                        <img src="education.png" 
                         alt="Education icon"
                         class="icon"/>
                         <h3>Education</h3>
@@ -196,11 +196,11 @@
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
-                <img src="./assets/email.png" alt="Email icon" class="icon contact-icon"/>
+                <img src="email.png" alt="Email icon" class="icon contact-icon"/>
                 <p><a href="mailto:bhoomikamittal418@gmail.com">bhoomikamittal418@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/linkedin.png" alt="Linkedin icon" class="icon contact-icon"/>
+                <img src="linkedin.png" alt="Linkedin icon" class="icon contact-icon"/>
                 <p><a href="https://www.linkedin.com/in/bhoomikamittal/">Linkedin</a></p>
             </div>
         </div>
