--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
                     </div>
                     </div>
                     <div class="text-container">
-                        <p><br/> I'm Bhoomika Mittal, an Engineering student. I am passionate about pursuing my major in Information Technology and Computer Science. My goal is to get into the IT World after graduating. I am currently looking for an Entry Level Position, which could be a step towards my Aspirations.
+                        <p>I'm Bhoomika Mittal, an Engineering student. I am passionate about pursuing my major in Information Technology and Computer Science. My goal is to get into the IT World after graduating. I am currently looking for an Entry Level Position, which could be a step towards my Aspirations.
                             I am open to learning new things and getting involved with new projects that can help me learn or apply all that I have learned throughout my university career.</p>
                     </div>
                 </div>
             </div>
     </section>
     <section id="skills">
+    </br>
         <p class="section__text__p1">Explore My</p>
         <h1 class="title">Skills</h1>
         <div class="skills-details-container">
